removed trailing comments, setup base for new viz

--- a/templates/results.html
+++ b/templates/results.html
@@ -69,7 +69,7 @@
 <center>
 <div class="mt-16 my-24 grid grid-cols-3 gap-5 mb-0 w-8/12 items-center">
     <div class="text-2xl font-bold text-left">
-        <p>Looks like Nike {{ company }} spied on you the most in 2020{{ company_year }}. They routed most of their mail through bouncex{{ company_tracking }} (the mail service company that tries extra hard to track you).<p>
+        <p>Looks like in {{ company_year }} most of your data was routed through one of {{ company }}'s many mail tracking services. ({{ email_sender }} Nike was mostly responsible for this).<p>
     </div>
     <div class="text-lg text-gray-500 text-justify col-span-2">
         <p>Companies want to sell you more stuff -- services, products, . To do this, many of them turn to email (ad) tracking to learn your online behaviour to send you more targeted ads. This tracking can range from confirming recipt of emails to collecting more sensitive info (and sometimes sending over unsecure protocols). While it is certainly difficult to say what data these companies may be collecting, we do our best to estimate what data they may be collecting from you.</p>
